Revert "css: two column form fields"
This reverts commit 215305c67af28cdd075971bf90878669304c8e8c.

--- a/resources/assets/stylesheets/field/richtext.scss
+++ b/resources/assets/stylesheets/field/richtext.scss
@@ -1,8 +1,7 @@
 .field {
     &.type-richtext,
     &.type-compact-richtext {
-        width: calc(100% - #{$form-gutter-half});
-        height: 160px;
+        width: calc(100% - #{$form-gutter-width});
     }
     
     
